@@ -1,3 +1,7 @@
+2005-03-23 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/canna_jrkanji.cpp: Removed some nosense modes.
+
 2005-03-22 Takuro Ashie <ashie@homa.ne.jp>
 
 	* src/scim_canna_imengine.cpp,
